@@ -1,4 +1,4 @@
-import pkg_resources
+import importlib.resources
 
 from PyQt6 import uic, QtCore, QtWidgets
 
@@ -11,9 +11,10 @@ class AnalysisView(QtWidgets.QWidget):
 
     def __init__(self, *args, **kwargs):
         super(AnalysisView, self).__init__(*args, **kwargs)
-        path_ui = pkg_resources.resource_filename(
-            "shapeout2.gui.analysis", "ana_view.ui")
-        uic.loadUi(path_ui, self)
+        ref = importlib.resources.files("shapeout2.gui.analysis") / "ana_view.ui"
+        with importlib.resources.as_file(ref) as path_ui:
+            uic.loadUi(path_ui, self)
+
         self.setWindowTitle("Analysis View")
         self.setMinimumSize(self.sizeHint())
         # Signals
