@@ -1,5 +1,5 @@
 import pathlib
-import pkg_resources
+import importlib.resources
 
 from PyQt6 import uic, QtCore, QtWidgets
 
@@ -15,9 +15,10 @@ from ..._version import version
 class ExportData(QtWidgets.QDialog):
     def __init__(self, parent, pipeline, *args, **kwargs):
         super(ExportData, self).__init__(parent=parent, *args, **kwargs)
-        path_ui = pkg_resources.resource_filename(
-            "shapeout2.gui.export", "e2data.ui")
-        uic.loadUi(path_ui, self)
+        ref = importlib.resources.files("shapeout2.gui.export") / "e2data.ui"
+        with importlib.resources.as_file(ref) as path_ui:
+            uic.loadUi(path_ui, self)
+
         # output path
         self._path = None
         # Get output path
