@@ -1,5 +1,5 @@
 import copy
-import pkg_resources
+import importlib.resources
 
 from PyQt6 import uic, QtCore, QtWidgets
 
@@ -15,9 +15,9 @@ class BlockMatrix(QtWidgets.QWidget):
     def __init__(self, *args, **kwargs):
         """Helper class that wraps DataMatrix and PlotMatrix"""
         super(BlockMatrix, self).__init__(*args, **kwargs)
-        path_ui = pkg_resources.resource_filename(
-            "shapeout2.gui.matrix", "block_matrix.ui")
-        uic.loadUi(path_ui, self)
+        ref = importlib.resources.files("shapeout2.gui.matrix") / "block_matrix.ui"
+        with importlib.resources.as_file(ref) as path_ui:
+            uic.loadUi(path_ui, self)
 
         self._old_state = {}
         # Signals
