@@ -1,4 +1,4 @@
-import pkg_resources
+import importlib.resources
 
 from PyQt6 import uic, QtCore, QtWidgets
 
@@ -13,9 +13,9 @@ class MatrixFilter(QtWidgets.QWidget):
 
     def __init__(self, identifier=None, state=None, *args, **kwargs):
         super(MatrixFilter, self).__init__(*args, **kwargs)
-        path_ui = pkg_resources.resource_filename(
-            "shapeout2.gui.matrix", "dm_filter.ui")
-        uic.loadUi(path_ui, self)
+        ref = importlib.resources.files("shapeout2.gui.matrix") / "dm_filter.ui"
+        with importlib.resources.as_file(ref) as path_ui:
+            uic.loadUi(path_ui, self)
 
         # options button
         menu = QtWidgets.QMenu()
